fixed .show -class on firefox

--- a/webapp/public/stylesheets/common.styl
+++ b/webapp/public/stylesheets/common.styl
@@ -50,12 +50,6 @@ opacity(value)
 	filter "alpha(opacity=" + value*100 + ")"
 	opacity value
 
-.show
-	-moz-opacity 1.0 !important
-	-webkit-opacity 1.0 !important
-	-ms-filter "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)" !important
-	filter "alpha(opacity=100)" !important
-	opacity 1.0 !important
 
 
 
