--- a/webapp/public/stylesheets/style.styl
+++ b/webapp/public/stylesheets/style.styl
@@ -42,6 +42,8 @@
 }
 
 
+.content.show
+	opacity 1
 .content
 	position absolute
 	top 0px
@@ -67,6 +69,8 @@
 		// border 10px solid red //debug
 
 
+		.endimage.show
+			opacity 1
 		.endimage
 			position absolute
 			top 0px
@@ -90,6 +94,8 @@
 		.play.hide, .rotating.hide
 			opacity 0
 
+		.yesimage.show
+			opacity 1
 		.yesimage
 			position absolute
 			bottom: 38.6%;
@@ -105,6 +111,8 @@
 		.yesimage:hover
 			background-image url('/images/yes_glow.png')
 
+		.response.show
+			opacity 1
 		.response
 			position absolute
 			top 0px
@@ -121,6 +129,8 @@
 			transition opacity 1s
 			display table
 
+		.response p.show
+			opacity 1
 		.response p
 			display table-cell
 			vertical-align middle
@@ -128,6 +138,8 @@
 			opacity 0
 			transition opacity 1s
 
+		.choice.show
+			opacity 1
 		.choice
 			position absolute
 			bottom -56px
